# turbo-storage-carnival

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: cargo_test.yml  docker-publish.yml  fmt.yml
crossfiles/: build.sh  deps.sh
frontend/: file-list.js  index.css  index.html  ja-jp.json  login.html  upload.js
frontend/buraha/: index.js  index.js.map
src/: api.rs  browsersafe.rs  id_service.rs  main.rs  models.rs
src/api/: files.rs  login.rs
src/api/files/: delete.rs  list.rs  meta.rs  mkdir.rs  mv.rs  show.rs  upload.rs
src/api/files/upload/: finish.rs  partial.rs  preflight.rs
src/models/: collection.rs  file.rs  meta.rs  user.rs
